--- a/package.json
+++ b/package.json
@@ -4,21 +4,37 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch 'src/**/*.ts' --exec ts-node src/server.ts"
+    "start": "nodemon --watch 'src/**/*.ts' --exec ts-node src/server.ts",
+    "test": "nyc mocha --require ts-node/register 'test/**/*.test.ts'"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/supertest": "^6.0.2",
     "express": "^4.21.0",
     "express-graphql": "^0.12.0",
     "graphql": "^15.9.0",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.19",
     "@types/express": "^4.17.21",
+    "@types/mocha": "^10.0.8",
     "@types/node": "^22.5.4",
+    "@types/sinon": "^17.0.3",
+    "chai": "^4.5.0",
+    "mocha": "^10.7.3",
     "nodemon": "^3.1.4",
+    "nyc": "^17.0.0",
+    "sinon": "^19.0.2",
+    "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
+  },
+  "nyc": {
+    "include": [
+      "src/**/*.ts"
+    ],
+    "all": true
   }
 }
