--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "test-gql",
+  "name": "eats",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon --watch 'src/**/*.ts' --exec ts-node src/server.ts",
-    "test": "nyc mocha --require ts-node/register 'test/**/*.test.ts'"
+    "test": "nyc mocha --require ts-node/register 'test/**/*.test.ts'",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
